--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
+      href="%PUBLIC_URL%/favicon/logo.ico"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon/logo.ico"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon/logo.ico"
     />
 
     <meta name="theme-color" content="#000000" />
@@ -51,7 +51,7 @@
     <title>برنامج التسجيل كلية الشريعة</title>
     <meta
       name="description"
-      content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
+      content="برنامح التجسيل الخاص بجامعة الكويت كلية الشريعة"
     />
     <meta
       name="keywords"
