added view all page

--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,7 @@
       name="description"
       content="برنامح التجسيل الخاص بجامعة الكويت كلية الشريعة"
     />
-    <meta
-      name="keywords"
-      content="react,material,kit,application,dashboard,admin,template"
-    />
+    <meta name="keywords" content="" />
     <meta name="author" content="Minimal UI Kit" />
   </head>
 
